<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/upd"
        android:orderInCategory="100"
        android:title="@string/Zero_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/feed"
        android:orderInCategory="100"
        android:title="@string/First_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutdev"
        android:orderInCategory="100"
        android:title="@string/Second_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/Third_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/uf"
        android:orderInCategory="100"
        android:title="@string/Fourth_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/query"
        android:orderInCategory="100"
        android:title="@string/Fifth_Menu"
        app:showAsAction="never" />
</menu>
