<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="piyush.almanac.cs3yr_faculty.Login">




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/login_email"
        android:layout_alignParentTop="true"

        android:layout_marginTop="163dp"

        android:hint="@string/login_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_pass"
        android:layout_below="@+id/login_email"

        android:hint="@string/login_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@+id/login_pass"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLogin"/>

    <TextView
        android:id="@+id/LoginToSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/logintosignuptext"
        android:layout_alignParentBottom="true"

        android:onClick="onClickLoginToSignUp"/>


</RelativeLayout>
